# cross-snapshot-attention-gnn

./: .gitignore  Dockerfile  LICENSE  README.md  dataset_sanity_check.py  docker-compose.yml  pyproject.toml  set_env.sh
DySAT/models/: layers.py  model.py
Roland/: model.py
experiments/: utils.py
experiments/classification/: runner.py
experiments/complexity/: runner.py
experiments/curriculum/: runner.py
experiments/datasets/: runner.py
experiments/density/: runner.py
experiments/explainability/attention_weights/: runner.py
experiments/masking/: runner.py
experiments/perturbations/anchoring/: runner.py
experiments/perturbations/behavior/: runner.py
experiments/perturbations/propagation/: runner.py
experiments/perturbations/statistics/: runner.py
experiments/pretext/prompting/: runner.py
experiments/runtime/: runner.py
experiments/transportability/: runner.py
src/augmentations/: augmentation.py
src/datasets/: analyzer.py  dataset.py  transform.py  transform_factory.py
src/datasets/crypto/: bitcoin_block_propagation.py
src/datasets/cybersecurity/: ddos.py
src/datasets/epidemics/: covid19.py  waves.py
src/datasets/random/: pretext.py  random.py  (+1 more)
src/models/: base_gnn.py  cross_snapshot_attention.py  prompting.py
src/perturbations/: edge_addition.py  edge_deletion.py  edge_rewiring.py  enum.py  node_addition.py  node_deletion.py  perturbation.py
src/training/: curriculum.py  losses.py  storing.py  trainer.py
src/utils/: correlation.py  drawing.py  graph.py  metrics.py  numbers.py  objects.py  path.py  profiler.py  results.py
(+29 files in other folders)
